# urban-mobility-forecasting

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: dependencies.py  main.py  schemas.py
api/routes/: demand.py  health.py  predictions.py  zones.py
dashboard/: app.py
docs/: architecture.md  modeling_approach.md
models/: feature_columns.json  model_metrics.csv
sql/: 001_create_tables.sql  002_create_indexes.sql  003_seed_static_tables.sql
src/: config.py  pipeline.py  run_all.py
src/database/: connection.py  load_to_postgres.py  read.py  schema.py  write.py
src/features/: build_features.py
src/ingestion/: load_holidays.py  load_taxi_data.py  load_weather_data.py  load_zone_lookup.py
src/models/: config.py  evaluate.py  predict.py  registry.py  train.py
src/processing/: aggregate_demand.py  clean_taxi_data.py  join_external_data.py
tests/: test_aggregate_demand.py  test_build_features.py  test_clean_taxi_data.py
