[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "urban-mobility-forecasting"
version = "0.1.0"
description = "Hourly NYC taxi demand forecasting by taxi zone."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["src*", "api*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
